Fix breakpoints for header and logo align, and build css

--- a/css/stylus/theme.styl
+++ b/css/stylus/theme.styl
@@ -24,7 +24,7 @@ header
   font-family fontFamily1
   clearfix()
   text-align center
-  @media (min-width: mediumWidthSize)
+  @media (min-width: smallWidthSize)
     text-align left
     display table
     width 100%
@@ -36,9 +36,9 @@ header
     display inline-block
     margin 0
 
-  > *
+  > *, h1
     vertical-align middle
-    @media (min-width: mediumWidthSize)
+    @media (min-width: smallWidthSize)
       display table-cell
 
 .container
@@ -58,6 +58,7 @@ header
   display inline-block
   text-align center
   line-height 0.3em
+  padding-top 0.5em
   position relative
   .subtitle
     font-size 0.2em
@@ -68,7 +69,7 @@ header
   display inline-block
   padding-left 0
   margin 0
-  @media (min-width: mediumWidthSize)
+  @media (min-width: smallWidthSize)
     display table-cell
     vertical-align middle
     text-align right
@@ -83,7 +84,7 @@ header
       text-decoration none
 
       padding (lineHeight/4)
-      @media (min-width: mediumWidthSize)
+      @media (min-width: smallWidthSize)
         padding (lineHeight/2)
 
       color brand-color
